--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">TODOList</string>
     <string name="add">Ajouter</string>
+    <string name="new_task">Nouvelle tâche</string>
 </resources>
